Updated role choices

--- a/apply.html
+++ b/apply.html
@@ -172,51 +172,51 @@
                         </label>
                         <div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="Website" value="Website"
+                                <input class="form-check-input" type="checkbox" name="website_team" id="website_team" value="yes"
                                     required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="Website">
+                                <label class="form-check-label" for="website_team">
                                     Website Team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="PR" value="PR" required
+                                <input class="form-check-input" type="checkbox" name="pr_team" id="pr_team" value="yes" required
                                     style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="PR">
+                                <label class="form-check-label" for="pr_team">
                                     PR team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="Curation" value="Curation"
+                                <input class="form-check-input" type="checkbox" name="curation_team" id="curation_team" value="yes"
                                     required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="Curation">
+                                <label class="form-check-label" for="curation_team">
                                     Curation Team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="Design" value="Design"
+                                <input class="form-check-input" type="checkbox" name="design_team" id="design_team" value="yes"
                                     required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="Design">
+                                <label class="form-check-label" for="design_tem">
                                     Design Team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="SocialMedia"
-                                    value="SocialMedia" required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="SocialMedia">
+                                <input class="form-check-input" type="checkbox" name="sm_team" id="sm_team"
+                                    value="yes" required style="border-radius: 50% !important;">
+                                <label class="form-check-label" for="sm_team">
                                     Social Media & Publicity Team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="Media" value="Media"
+                                <input class="form-check-input" type="checkbox" name="media_team" id="media_team" value="yes"
                                     required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="Media">
+                                <label class="form-check-label" for="media_team">
                                     Media Team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="team" id="Marketing"
+                                <input class="form-check-input" type="checkbox" name="marketing_team" id="marketing_team"
                                     value="Marketing" required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="Marketing">
+                                <label class="form-check-label" for="marketing_team">
                                     Marketing Team
                                 </label>
                             </div>
