--- a/apply.html
+++ b/apply.html
@@ -173,13 +173,13 @@
                         <div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="website_team" id="website_team" value="yes"
-                                    required style="border-radius: 5px !important;">
+                                    style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="website_team">
                                     Website Team
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="pr_team" id="pr_team" value="yes" required
+                                <input class="form-check-input" type="checkbox" name="pr_team" id="pr_team" value="yes"
                                     style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="pr_team">
                                     PR team
@@ -187,35 +187,35 @@
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="curation_team" id="curation_team" value="yes"
-                                    required style="border-radius: 5px !important;">
+                                    style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="curation_team">
                                     Curation Team
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="design_team" id="design_team" value="yes"
-                                    required style="border-radius: 5px !important;">
+                                    style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="design_tem">
                                     Design Team
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="sm_team" id="sm_team"
-                                    value="yes" required style="border-radius: 5px !important;">
+                                    value="yes" style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="sm_team">
                                     Social Media & Publicity Team
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="media_team" id="media_team" value="yes"
-                                    required style="border-radius: 5px !important;">
+                                    style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="media_team">
                                     Media Team
                                 </label>
                             </div>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" name="marketing_team" id="marketing_team"
-                                    value="Marketing" required style="border-radius: 5px !important;">
+                                    value="Marketing" style="border-radius: 5px !important;">
                                 <label class="form-check-label" for="marketing_team">
                                     Marketing Team
                                 </label>
