--- a/apply.html
+++ b/apply.html
@@ -43,226 +43,21 @@
     </div>
 
 
-    <div class="container pb-5 text-white">
+    <div class="container pb-5 text-white text-center pt-5">
         <div class="row justify-content-center">
             <div class="col">
                 <h3 class="text-white mt-4">
                     <strong style="font-size: 30px; border: none;">
-                        Team Application form
+                        Team Applications have been closed!
+                        <br><br>
+                        Stay tuned for more!
                     </strong>
                 </h3>
-                <p class="text-white mb-4">
-                    Exclusive for SE and TE students of SIES GST
-                </p>
-                <form method="post" id="applicationForm" name="applicationForm">
-                    <div class="mb-3">
-                        <label for="name" class="form-label">
-                            <strong>
-                                Full Name
-                            </strong>
-                        </label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Full Name"
-                            required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">
-                            <strong>
-                                Email address
-                            </strong>
-                        </label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
-                            placeholder="Enter Email ID (@siesgst.ac.in or @gst.sies.edu.in)" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="prn" class="form-label">
-                            <strong>
-                                PRN
-                            </strong>
-                        </label>
-                        <input type="text" class="form-control" id="prn" name="prn" placeholder="Enter PRN" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="phone" class="form-label">
-                            <strong>
-                                Phone Number
-                            </strong>
-                        </label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="9999999999"
-                            required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="year" class="form-label">
-                            <strong>
-                                Year
-                            </strong>
-                        </label>
-                        <div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="year" id="SE" value="SE" required
-                                    style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="SE">
-                                    SE
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="year" id="TE" value="TE"
-                                    style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="TE">
-                                    TE
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="year" class="form-label">
-                            <strong>
-                                Branch
-                            </strong>
-                        </label>
-                        <div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="branch" id="CE" value="CE" required
-                                    style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="CE">
-                                    CE
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="branch" id="IT" value="IT" required
-                                    style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="IT">
-                                    IT
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="branch" id="EXTC" value="EXTC"
-                                    required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="EXTC">
-                                    EXTC
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="branch" id="MECH" value="MECH"
-                                    required style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="MECH">
-                                    MECH
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="branch" id="PPT" value="PPT" required
-                                    style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="PPT">
-                                    PPT
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="branch" id="ECS" value="ECS" required
-                                    style="border-radius: 50% !important;">
-                                <label class="form-check-label" for="ECS">
-                                    ECS
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="year" class="form-label">
-                            <strong>
-                                Preferred Team
-                            </strong>
-                        </label>
-                        <div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="website_team" id="website_team" value="yes"
-                                    style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="website_team">
-                                    Website Team
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="pr_team" id="pr_team" value="yes"
-                                    style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="pr_team">
-                                    PR team
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="curation_team" id="curation_team" value="yes"
-                                    style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="curation_team">
-                                    Curation Team
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="design_team" id="design_team" value="yes"
-                                    style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="design_tem">
-                                    Design Team
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="sm_team" id="sm_team"
-                                    value="yes" style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="sm_team">
-                                    Social Media & Publicity Team
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="media_team" id="media_team" value="yes"
-                                    style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="media_team">
-                                    Media Team
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" name="marketing_team" id="marketing_team"
-                                    value="Marketing" style="border-radius: 5px !important;">
-                                <label class="form-check-label" for="marketing_team">
-                                    Marketing Team
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="team_experience" class="form-label">
-                            <strong>
-                                Previous Work Experience in other teams
-                            </strong>
-
-                        </label>
-                        <textarea class="form-control" id="team_experience" name="team_experience"
-                            placeholder="Describe in detail about your contributions in other teams" required
-                            rows="4"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <label for="tedx_experience" class="form-label">
-                            <strong>
-                                What do you know about TEDx and name some of your favorite TEDx speeches.
-                            </strong>
-
-                        </label>
-                        <textarea class="form-control" id="tedx_experience" name="tedx_experience"
-                            placeholder="Describe in detail about your TEDx knowledge and experience" required
-                            rows="4"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <label for="contribute" class="form-label">
-                            <strong>
-                                How do you plan to contribute to the event?(With respect to the team that you've
-                                selected)
-                            </strong>
-
-                        </label>
-                        <textarea class="form-control" id="contribute" name="contribute"
-                            placeholder="Describe in detail how you will be an asset to the team" required
-                            rows="4"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
             </div>
         </div>
     </div>
 
-    <footer class="container pb-3">
+    <footer class="container pb-3 mt-5">
         <div class="row justify-content-center text-center">
             <div class="col-lg-4">
                 <div class="row justify-content-center">
@@ -318,23 +113,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-
-    <!--Scripts-->
-    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="js/jquery.countdown.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-
-    <script>
-        const applicationURL = 'https://script.google.com/macros/s/AKfycbzs9XTtD_65GioQZk1URpVfoWt6r04tDri-00Yyu1LBB4L20tzlCI1pCB-NTwZBEIBSpw/exec'
-        const applicationForm = document.forms['applicationForm']
-        applicationForm.addEventListener('submit', e => {
-            e.preventDefault()
-            fetch(applicationURL, { method: 'POST', body: new FormData(applicationForm) })
-                .then(response => alert("Thank you for the application. We will keep you posted on the provided email Address."))
-                .catch(error => console.error(error.message))
-            document.getElementById("applicationForm").reset();
-        });
-    </script>
 </body>
 
 </html>
